Ensure background cover image covers entire page (BL-16173)

--- a/src/content/bookLayout/basePage-legacy-5-6.less
+++ b/src/content/bookLayout/basePage-legacy-5-6.less
@@ -40,7 +40,7 @@ textarea,
     flex-direction: column;
 }
 .bloom-background-image-in-style-attr {
-    background-size: contain;
+    background-size: cover; // contain can leave space and allow background color to show (BL-16173)
     background-repeat: no-repeat;
     background-position: center;
 }
